ref: Add styling with bootstrap

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,14 @@
 <main>
   <a [routerLink]="['/']">
-  <header class="brand-name">
-    <img class="brand-logo" src="/assets/code.png" alt="logo" aria-hidden="true" />
-  </header>
-</a>
+    <header class="brand-name">
+      <img
+        class="brand-logo"
+        src="/assets/code.png"
+        alt="logo"
+        aria-hidden="true"
+      />
+    </header>
+  </a>
   <section class="content">
     <router-outlet></router-outlet>
   </section>
