--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,14 @@
 <section>
-    <form>
-        <input type="text" placeholder="Filter by city" #filter />
-        <button class="primary" type="button" (click)="filterResults(filter.value)">Search</button>
-    </form>
+  <form>
+    <input type="text" placeholder="Filter by city" #filter />
+    <button class="primary" type="button" (click)="filterResults(filter.value)">
+      Search
+    </button>
+  </form>
 </section>
 <section class="results">
-    <!-- is Props?? similiar with Input -->
-    <app-housing-location 
+  <app-housing-location
     *ngFor="let housingLocation of filteredLocationList"
-    [housingLocation]="housingLocation" ></app-housing-location>
+    [housingLocation]="housingLocation"
+  ></app-housing-location>
 </section>
